2014-06-25  Per Bothner  <per@bothner.com>

	* Field.java (getAnnotation): New method.
	* Method.java (rmethod): New field.
	(getAnnotation): New method.
	* ClassType.java (AddField): New convenience method.
	It also sets rfield.
	(addField): Use it.
	(addMethod): Set Method's rmethod field.
	* RuntimeAnnotationsAttr.java (getAnnotation *2): New methods.

	* ArrayType.java (getRawType): New method.

2014-06-16  Per Bothner  <per@bothner.com>

	* SwitchState.java: Various fixes, mainly becase fixupChain
	doesn't attempt to manage and propagate type-states.

2014-04-18  Per Bothner  <per@bothner.com>

	* CodeAttr.java (disAssembleWithFixups): Fix some logic bugs,
	most critically in handling of FIXUP_CASE.
	(processFixups): Add commented-out call to disAssembleWithFixups.

	Support new Java8 constant pool entry types.
	* ConstantPool.java (METHOD_HANDLE, METHOD_TYPE, INVOKE_DYNAMIC,
	ANY_REF): New constants.
	(getForced): Handle new types.
	* CpoolInvokeDynamic.java: New class, extends CpoolEntry.
	* CpoolMethodHandle.java: New class, extends CpoolEntry.
	* CpoolMethodType.java: New class, extends CpoolEntry.
	* Makefile.am: Update accordingly.

2014-03-01  Per Bothner  <per@bothner.com>

	* Scope.java (fixParamNames): New method to rename parameter names.

2014-02-17  Per Bothner  <per@bothner.com>

	* ArrayClassLoader.java: Make sure Error is uncaught or re-thrown.
	* ClassType.java: Likewise.

2014-02-12  Per Bothner  <per@bothner.com>

	* CodeAttr.java (emitAndThen): New method.
	(pushIfState): New private convenience method.  Use as needed.
	* IfState.java (andThenSet): New field.

2013-12-29  Per Bothner  <per@bothner.com>

	* CodeAttr.java (emitGotoIfNull, emitGotoIfNonNull): New methods.

2013-12-02  Per Bothner  <per@bothner.com>

	* CodeAttr.java (castNeeded): Force top-type to raw type.
	This is needed for TypeVariable in addition to UninitializedType.

2013-11-13  Per Bothner  <per@bothner.com>

	* ObjectType.java (getReflectClass): Simplify since we can